[package]
name = "deno_redis"
version = "0.1.0"
authors = ["gqk <gaomengjie_forever@163.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
redis = "0.15.1"
bson = "0.14.0"
serde_json = "1.0.48"
futures = "0.3.4"
deno_core = "0.35.0"
lazy_static = "1.4.0"
rusty_v8 = "0.3.4"