[package]
name = "deno_redis"
version = "0.1.0"
authors = ["gqk <gaomengjie_forever@163.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
redis = { version = "0.15.1", features=["tokio-rt-core"] }
tokio = { version = "0.2", features = ["rt-core", "tcp", "udp", "process", "fs", "blocking", "sync", "io-std", "macros", "time"] }
bson = "0.14.0"
serde_json = "1.0.48"
futures = "0.3.4"
deno_core = "0.35.0"
lazy_static = "1.4.0"
rusty_v8 = "0.3.4"
log = "0.4.8"
